<resources>
    <string name="app_name">Tiwana</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!--titles-->
    <string name="target">Target</string>
    <string name="target_details">Target Detail</string>
    <string name="select_asm">Select ASM</string>
    <string name="notifications">Notifications</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="leave">Leave</string>
    <string name="message">Message</string>
    <string name="create_message">Create Message</string>
    <string name="create_target">Create Target</string>
    <string name="distribute_target">Distribute Target</string>

    <!--btns-->
    <string name="btn_ok">Ok</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_login">Login</string>
    <string name="btn_search">SEARCH</string>
    <string name="btn_send">SEND</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_create_target">CREATE TARGET</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_add_new_payment">ADD NEW PAYMENT</string>

    <!--tabs-->
    <string name="btn_target">Target</string>
    <string name="btn_notification">Notification</string>
    <string name="btn_history">History</string>
    <string name="btn_message">Message</string>
    <string name="btn_leaves">Leave</string>

    <!--login fields-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_pwd">Remember Password</string>
    <string name="forgot_pwd">Forgot Password?</string>

    <!--create target-->
    <string name="select_product">Select Product and their Quantity</string>

    <!--leave-->
    <string name="type_of_leave">Type of leave</string>
    <string name="medical">Medical</string>
    <string name="casual">Casual</string>
    <string name="emergency">Emergency</string>
    <string name="no_of_days">Number of days</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reason_for_leave">Reason for the leave</string>
    <string name="enter_reason">Enter reason</string>

    <!--notification-->
    <string name="sales">Sales</string>
    <string name="human_resource">Human Resources</string>
    <string name="finance">Finance</string>
    <string name="my_leaves">My Leaves</string>
    <string name="staff_leaves">Staff Leaves</string>


    <string name="select_asm_allocate_target">Select ASM &amp; Allocate Target</string>
    <string name="total_target">Total Target</string>
    <string name="target_achieved">Target Achieved</string>
    <string name="total_pending">Total Pending</string>
    <string name="target_first_quarter">Target-1st Quarter-2016</string>

    <string name="enter_message">Enter message</string>
    <string name="select_month">Select Month</string>

    <!--my job-->
    <string name="my_job_title">My Job</string>
    <string name="travelling_allowance">Travelling Allowance</string>
    <string name="daily_allowance">Daily Allowance</string>
    <string name="other_allowance">Other Allowance</string>

    <!--payment history-->
    <string name="payment_history_title">Payment History</string>
    <string name="add_new_payment">Add new payment</string>
    <string name="enter_code">Enter employee code</string>
    <string name="enter_password">Enter password</string>
    <string name="error_message">Some error occured, please try again</string>
    <string name="first_quater_text">1st Quater final 2016</string>
    <string name="target_pending">Target Pending</string>
    <string name="start_job">START JOB</string>
    <string name="btn_job_started">JOB STARTED</string>
    <string name="stop_job">STOP JOB</string>
    <string name="btn_job_stopped">JOB STOPPED</string>
    <string name="location_lock">LOCATION LOCK</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email ID</string>
    <string name="emp_code">Employee Code</string>
    <string name="area_code">Area Code</string>
    <string name="age">Age</string>
    <string name="mobile">Mobile Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="job_started">Job Already Started</string>
    <string name="job_stoped">Job Already Stopped</string>
    <string name="exit_msg">Do you want to exit?</string>
    <string name="logot_msg">Do you want to logout?</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="on_gps">Turn on your GPS</string>
    <string name="select_leave_type">Select leave type</string>
    <string name="select_from_date">Select From date</string>
    <string name="select_to_date">Select To date</string>
    <string name="select_days">Select days</string>
    <string name="pending">Pending</string>
    <string name="cancel">Cancelled</string>
    <string name="approve">Approved</string>
    <string name="leave_details">Leave details</string>
    <string name="rejected">Rejected</string>
    <string name="enter_text">Enter text</string>
    <string name="message_details">Message Details</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="sale_officer">Sales Officer</string>
    <string name="area_sales_officer">Area Sales Officer</string>
    <string name="general_manager">General Manager</string>
    <string name="amount">Amount</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="date">Date</string>
    <string name="party_name">Party Name</string>
    <string name="cheque_no">Cheque number</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="enter_amount">Enter amount</string>
    <string name="select_payment_mode">Select payment mode</string>
    <string name="enter_cheque_number">Enter Cheque Number</string>
    <string name="enter_transaction_id">Enter Transaction Id</string>
    <string name="select_date">Select Date</string>
    <string name="select_party_name">Select Party Name</string>
    <string name="btn_my_jobs">My jobs</string>
    <string name="received_on">Received On</string>
    <string name="received_from">Received From</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="neft">NEFT</string>
    <string name="imps">IMPS</string>
    <string name="rtgs">RTGS</string>
    <string name="online">Online</string>
    <string name="btn_my_orders">My orders</string>
    <string name="signup_as_dealer">SignUp as Dealer</string>
    <string name="enquiry">Enquiry</string>
    <string name="company_name">Company Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_signup">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email Id</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="btn_products">Products</string>
    <string name="phone">Phone number</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_state">Select plant name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_party_name">Enter party name</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity</string>
    <string name="place_order">Place order</string>
    <string name="login_as_dealer">Login as dealer</string>
    <string name="weight">Weight</string>
    <string name="delete">Delete</string>
    <string name="btn_payments">Payments</string>
    <string name="sign_up_msg">Thank you for registering with us, your profile is under review.</string>
    <string name="enter_valid_email">Please enter valid email id</string>
    <string name="phone_length">Phone number length must be 10 digits</string>
    <string name="address_validation">Address can not be less than 3 characters</string>
    <string name="city_validation">City can not be less than 3 characters</string>
    <string name="company_validation">Company name can not be less than 3 characters</string>
    <string name="name_validation">Name can not be less than 3 characters</string>
    <string name="order_number">Order number (Optional)</string>
    <string name="btn_pay">Pay</string>
    <string name="adhar_no">Aadhar number</string>
    <string name="enter_valid_aadhar">Enter valid Aadhar number</string>
    <string name="paid_on">Paid On</string>
    <string name="enter_aadhar_no">Enter Aadhar number</string>
    <string name="valid_password">Password length can not be less than 6 characters</string>
    <string name="party_name_validation">Party name can not be less than 3 characters</string>
    <string name="reject">Reject</string>
    <string name="approveee">Approve</string>
    <string name="add_allowance_msg">You can add your allowances once a day after stopping the job.</string>
    <string name="add_allowance">Add allowances</string>
    <string name="add_daily_allow">Please add daily allowances</string>
    <string name="create_order">Create\\nOrder</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="select_so">Select SO</string>
    <string name="sold_msg">sold out of</string>
    <string name="missing_party_id">Party Id is missing</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_history">Order History</string>
    <string name="location_off">Admin has turned off your location</string>
    <string name="getting_token">Getting token, please try again</string>
    <string name="contact_name">Contact person name</string>
    <string name="dob">DOB</string>
    <string name="post_address">Post address</string>
    <string name="dealer_name">Dealer name</string>
    <string name="father_name">Father name</string>
    <string name="father_name_validation">Father name can not be less than 3 characters</string>
    <string name="enter_father_name">Enter father name</string>


    <!--image dialog-->
    <string-array name="image_options">
        <item>Photo Library</item>
        <item>Take Photo</item>
        <item>Remove</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="send_message_options">
        <item>Send to Juniors</item>
        <item>Send to Senior</item>
        <item>Cancel</item>
    </string-array>

    <!--payment type dialog-->
    <string-array name="payment_type">
        <item>Cheque</item>
        <item>NEFT</item>
        <item>Cash</item>
        <item>Online</item>
        <item>IMPS</item>
        <item>RTGS</item>
        <item>Cancel</item>
    </string-array>


</resources>
