<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_of_leave" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_days" />

            <Spinner
                android:id="@+id/spn_no_of_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/list_green">

                <TextView
                    android:id="@+id/txt_from"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="14-dec-2016" />

                <ImageView
                    android:id="@+id/iv_from"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@color/ed_bg_logo"
                    android:src="@mipmap/ic_calendar" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/to" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/list_green">

                <TextView
                    android:id="@+id/txt_to"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="14-dec-2016" />

                <ImageView
                    android:id="@+id/iv_to"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@color/ed_bg_logo"
                    android:src="@mipmap/ic_calendar" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reason_for_leave" />

            <EditText
                android:id="@+id/ed_search"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/list_green"
                android:gravity="top"
                android:hint="@string/enter_reason"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/ed_bg_logo"
                android:text="@string/btn_search"
                android:textColor="@color/dark_green_text"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>