<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lin_bottom_btns">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!--<ImageView
                android:id="@+id/iv_profile_pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_launcher" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">


                <com.gk.myapp.customs.EditTextTitil
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/contact_name"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <com.gk.myapp.customs.EditTextTitil
                    android:id="@+id/ed_father_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/father_name"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <com.gk.myapp.customs.EditTextTitil
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <com.gk.myapp.customs.EditTextTitil
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <com.gk.myapp.customs.EditTextTitil
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal"
                    android:maxLength="10"/>

                <com.gk.myapp.customs.TextViewTitil
                    android:id="@+id/ed_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/dob"
                    android:inputType="number|date"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal"
                    android:maxLength="10"/>

                <com.gk.myapp.customs.EditTextTitil
                    android:id="@+id/ed_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/post_address"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <com.gk.myapp.customs.EditTextTitil
                    android:id="@+id/ed_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/city"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <Spinner
                    android:id="@+id/spn_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@null" />

                <com.gk.myapp.customs.EditTextTitil
                    android:id="@+id/ed_adhar_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/adhar_no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal"
                    android:maxLength="12"/>

                <com.gk.myapp.customs.EditTextTitil
                    android:id="@+id/ed_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@color/list_green"
                    android:gravity="center_vertical"
                    android:hint="@string/dealer_name"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />

                <RadioGroup
                    android:id="@+id/rad_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rad_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/chk_selector"
                        android:checked="true"
                        android:paddingLeft="10dp"
                        android:text="@string/male"
                        android:textColor="@color/green_text"
                        android:textSize="@dimen/very_small" />

                    <RadioButton
                        android:id="@+id/rad_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/chk_selector"
                        android:paddingLeft="10dp"
                        android:text="@string/female"
                        android:textColor="@color/green_text"
                        android:textSize="@dimen/very_small" />
                </RadioGroup>

                <com.gk.myapp.customs.ButtonTitilSemi
                    android:id="@+id/btn_signup"
                    style="@style/MyCustomGreenButton"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/btn_signup"
                    android:textSize="@dimen/text_size_button" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>